--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
+  "scripts": {
+    "commitlint": "commitlint -E HUSKY_GIT_PARAMS",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": ["eslint --fix", "prettier --write", "git add"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged && npm run commitlint"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.0",
+    "@commitlint/config-conventional": "^19.1.0",
     "@types/debug": "^4.1.12",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5"
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5",
+    "semver": "^7.6.0"
   },
   "dependencies": {
     "dotenv": "^16.4.5"
