--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "scripts": {
-    "commitlint": "commitlint -E HUSKY_GIT_PARAMS",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": ["eslint --fix", "prettier --write", "git add"]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged && npm run commitlint"
+    "scripts": {
+        "commitlint": "commitlint -E HUSKY_GIT_PARAMS",
+        "prepare": "husky install",
+        "precommit": "lint-staged"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "eslint --fix",
+            "prettier --write"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint-staged && npm run commitlint"
+        }
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^19.2.0",
+        "@commitlint/config-conventional": "^19.1.0",
+        "@types/debug": "^4.1.12",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+        "eslint": "^8.57.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-markdown": "^4.0.1",
+        "eslint-plugin-prettier": "^5.1.3",
+        "husky": "^9.0.11",
+    "jsonc-eslint-parser": "^2.4.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
+        "semver": "^7.6.0"
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5"
     }
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^19.2.0",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@types/debug": "^4.1.12",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "semver": "^7.6.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5"
-  }
 }
